fixed the typeahead dropdown's text alignment

--- a/public/static/assets/typeahead-fix.css
+++ b/public/static/assets/typeahead-fix.css
@@ -31,6 +31,7 @@
     -moz-background-clip: padding;
     background-clip: padding-box;
     width:100%;
+    text-align: left;
 }
 
 .tt-suggestion {
